*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.4 ===
* Fixed unintialized values issue.
* Updated build scripts.
* Added Sample::stretch() method for stretching samples.
* Updated dspu::Gate module, now it allows to properly use the reverse gate option.

=== 1.0.3 ===
* Fixed memory leak in dspu::LatencyDetector module.
* Fixed operation on uninitialized values for dspu::Depopper module.
* Added support of modern C++ 11 standard and above.
* Updated dependencies.
* Updated build scripts.

=== 1.0.2 ===
* Fixed typo in Wavefront Object File Format name.
* Added dspu::semitones_to_frequency_shift function that allows to compute relative
  frequency multiplier for relative musical pitch shift.
* Added set_channels() method to the Sample class for easy resizing purpose.
* Fixed uninitialized variable usage in the dspu::Crossover module.
* Many bugfixes and updates related to colored noise generation.
* Updated build scripts.

=== 1.0.1 ===
* Fixed bugs in construct()/destroy() method pairs for several DSP modules.
* Added denial of copy constructors for all DSP units.
* Updated build scripts.

=== 1.0.0 ===
* Added MLS noise generator.
* Added LCG Noise generator
* Added Velvet Noise generator.
* Added Spectral Tilt arbitrary color filter.
* Added High order Butterworth filter for inaudible noise.
* Added Noise Generator class for arbitrary noise generation.

=== 0.5.4 ===
* Added dspu::Sample::normalize method for sample normalization.
* Updated build system.
* Added raytracing-related program modules.
* Added trigger module.
* Added x4 lobe support for oversampling.

=== 0.5.3 ===
* Added LSP_DSP_UNITS_SOUND_SPEED_M_S constant that defines sound speed.
* Added reset() method to the dspu::Equalizer class to reset internal memory.
* Added different information methods to the dspu::Equalizer which allow to obtain