@@ -7,6 +7,7 @@
 * Updated build scripts.
 * Added Sample::stretch() method for stretching samples.
 * Updated dspu::Gate module, now it allows to properly use the reverse gate option.
+* Improved mathematics in dspu::Compressor module, added support of limited compression gain.
 
 === 1.0.3 ===
 * Fixed memory leak in dspu::LatencyDetector module.
